[package]
name = "led_test"
version = "0.1.0"
authors = ["iLifetruth <yixiaonn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"

[dependencies.stm32f4]
features = ["stm32f407", "rt"]
version = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 's'
lto = true




